// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly outline button 1`] = `
<button
  class="font-semibold p-3 rounded transition ease-in-out flex justify-center items-center border border-primary-dark text-primary-dark"
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly with default properties 1`] = `
<DocumentFragment>
  <button
    class="font-semibold p-3 rounded transition ease-in-out flex justify-center items-center"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;
